  CHANGES IN BayesFactor VERSION 0.9.12-2

CHANGES
  * Fixed bug that disallowed logical indexing of probability objects
  * Fixed minor typos in documentation
  * Fixed bug causing regression Bayes factors to fail for very small R^2
  * Fixed bug disallowing expansion of dot (.) in generalTestBF model specifications
  * Fixed bug preventing cancelling of all analyses with interrupt

  CHANGES IN BayesFactor VERSION 0.9.11-1

CHANGES
  * Fixed memory bug causing importance sampling to fail.

  CHANGES IN BayesFactor VERSION 0.9.11

CHANGES
  * Added support for prior/posterior odds and probabilities. See the new vignette for details.
  * Added approximation for t test in case of large t
  * Made some error messages clearer
  * Use callbacks at least once in all cases
  * Fix bug preventing continuous interactions from showing in regression Gibbs sampler
  * Removed unexported function oneWayAOV.Gibbs(), and related C functions, due to redundancy
  * gMap from model.matrix is now 0-indexed vector (for compatibility with C functions)
  * substantial changes to backend, to Rcpp and RcppEigen for speed
  * removed redundant struc argument from nWayAOV (use gMap instead)

  CHANGES IN BayesFactor VERSION 0.9.10-2

CHANGES
  * Removed "see also" to package BAS, due to its being archived

  CHANGES IN BayesFactor VERSION 0.9.10-1

CHANGES
  * Fixed issue causing Solaris build to fail

  CHANGES IN BayesFactor VERSION 0.9.10

CHANGES
  *  Fixed bug in model enumeration code in generalTestBF (affected "withmain" analyses with neverExclude argument)
  *  Various bug fixes
  *  Analyses are more error tolerant (problem analyses will yield NA in BayesFactor object)
  *  Fixed some typos in citation information
  *  Improved numerical stability of proportional error estimates

  CHANGES IN BayesFactor VERSION 0.9.9

CHANGES
  *  Added "simple" argument to ttest.tstat, oneWayAOV.Fstat, and linearReg.R2stat; when TRUE, return only the Bayes factor (not the log BF and error)