@@ -6,6 +6,7 @@ CHANGES
   * Fixed bug causing regression Bayes factors to fail for very small R^2
   * Fixed bug disallowing expansion of dot (.) in generalTestBF model specifications
   * Fixed bug preventing cancelling of all analyses with interrupt
+  * Restricted contingency prior to values >=1
 
   CHANGES IN BayesFactor VERSION 0.9.11-1
 
